replaced test urls with production urls

--- a/static/login/index.html
+++ b/static/login/index.html
@@ -16,7 +16,7 @@
         <button type="submit">Login</button>
     </form>
     <div class="login-link">
-        <p>Don't have an account? <a href="http://localhost:8080/signup">Sign up</a></p>
+        <p>Don't have an account? <a href="https://chat-hub.liara.run/signup">Sign up</a></p>
     </div>
 </div>
 </body>
