--- a/static/signup/index.html
+++ b/static/signup/index.html
@@ -16,7 +16,7 @@
         <button type="submit">Sign Up</button>
     </form>
     <div class="signup-link">
-        <p>Already have an account? <a href="http://localhost:8080/login">Login</a></p>
+        <p>Already have an account? <a href="https://chat-hub.liara.run/login">Login</a></p>
     </div>
 </div>
 </body>
